--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <section>
 
     <div class="Cambio de pagina">
-      <div class="container">
+      <div class="container-fluid p-4">
         <nav>
           <div class="nav nav-tabs justify-content-center" id="nav-tab" role="tablist">
             <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home"
@@ -89,40 +89,40 @@
           <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab"
             tabindex="0">
             <div class="row d-flex" style="margin: auto;">
-              <div class="col-12 col-md-4 card bg-transparent border border-white  bs-border-width: 0 p-0"
+              <div class="col-12 col-md-4 card bg-transparent border border-white  bs-border-width: 0 p-1"
                 style="height: 23rem; ">
                 <img src="https://i.pinimg.com/474x/3c/55/45/3c55457fee2a871acc3d117052430943.jpg" class="card-img-top"
                   alt="..." style="height: 100%; width: 100%;">
               </div>
-              <div class=" col-12 col-md-4 bg-transparent border border-white p-0" style="height: 23rem; ">
+              <div class=" col-12 col-md-4 bg-transparent border border-white p-1" style="height: 23rem; ">
                 <img src="https://i.pinimg.com/474x/93/66/57/9366577d388a242df4db924b4a21d048.jpg" class="card-img-top"
                   alt="..." style="height: 100%; width: 100%;">
               </div>
-              <div class=" col-12 col-md-4 bg-transparent border border-white p-0" style="height: 23rem;">
+              <div class=" col-12 col-md-4 bg-transparent border border-white p-1" style="height: 23rem;">
                 <img src="https://i.pinimg.com/564x/c9/fe/30/c9fe3089d2e08f8ad9aa42393355a50d.jpg" class="card-img-top"
                   alt="..." style="height: 100%; width: 100%;">
               </div>
-              <div class="col-12 col-md-4 p-0 bg-transparent border border-white" style="height: 23rem;">
+              <div class="col-12 col-md-4 p-1 bg-transparent border border-white" style="height: 23rem;">
                 <img src="https://i.pinimg.com/564x/5f/d4/ef/5fd4ef083f00bcfba9a8e159c37b91da.jpg" class="card-img-top"
                   alt="..." style="height: 100%; width: 100%;">
               </div>
-              <div class="col-12 col-md-4 p-0 card bg-transparent border border-white" style="height: 23rem;">
+              <div class="col-12 col-md-4 p-1 card bg-transparent border border-white" style="height: 23rem;">
                 <img src="https://i.pinimg.com/564x/5b/27/e7/5b27e7eabd4040cf1a0c8727d48f38b2.jpg" class="card-img-top"
                   alt="..." style="height: 100%; width: 100%;">
               </div>
-              <div class="col-12 col-md-4 p-0 card bg-transparent border border-white" style="height: 23rem;">
+              <div class="col-12 col-md-4 p-1 card bg-transparent border border-white" style="height: 23rem;">
                 <img src="https://i.pinimg.com/564x/68/e3/a8/68e3a831c8f247d4187507a8b62d35e1.jpg" class="card-img-top"
                   alt="..." style="height: 100%; width: 100%;">
               </div>
-              <div class="col-12 col-md-4 p-0 card bg-transparent border border-white " style="height: 23rem;">
+              <div class="col-12 col-md-4 p-1 card bg-transparent border border-white " style="height: 23rem;">
                 <img src="https://i.pinimg.com/564x/e9/d9/ef/e9d9efcc638bdc52d82b7d8aceb1d60c.jpg" class="card-img-top"
                   alt="..." style="height: 100%; width: 100%;">
               </div>
-              <div class="col-12 col-md-4 p-0 card bg-transparent border border-white" style="height: 23rem;">
+              <div class="col-12 col-md-4 p-1 card bg-transparent border border-white" style="height: 23rem;">
                 <img src="https://i.pinimg.com/564x/9f/33/89/9f3389441b2a9aa4699bcc46ec252a7e.jpg" class="card-img-top"
                   alt="..." style="height: 100%; width: 100%;">
               </div>
-              <div class="col-12 col-md-4 p-0 card bg-transparent border border-white" style="height: 23rem;">
+              <div class="col-12 col-md-4 p-1 card bg-transparent border border-white" style="height: 23rem;">
                 <img src="https://i.pinimg.com/564x/e5/6c/7c/e56c7c2b22fb888bb9d8b323fad68105.jpg" class="card-img-top"
                   alt="..." style="height: 100%; width: 100%;">
               </div>
